
import("../webrtc.gni")


group("mytest") {
  # This target shall build all targets in examples.
  testonly = true
  public_deps = []
  public_deps += [
    ":test_pc",
  ]



  if (is_ios || (is_mac && target_cpu != "x86")) {

  }

  if (is_linux || is_win) {

  }
}



rtc_executable("test_pc") {
  testonly = true
  deps = []
  defines = []
  sources = [
    "test_pc/main.cpp",
    "test_pc/webrtc.cpp",
    "test_pc/webrtc.h",

  ]
  if (!build_with_chromium && is_clang) {
    # Suppress warnings from the Chromium Clang plugin (bugs.webrtc.org/163).
    suppressed_configs += [ "//build/config/clang:find_bad_constructs" ]
  }
  deps += [ 
    "../api:libjingle_peerconnection_api",
    "../api:libjingle_peerconnection_test_api",
    "../api/audio_codecs:builtin_audio_decoder_factory",
    "../api/audio_codecs:builtin_audio_encoder_factory",
    "../api/video:video_frame",
    "../api/video_codecs:builtin_video_decoder_factory",
    "../api/video_codecs:builtin_video_encoder_factory",
    "../media:rtc_audio_video",
    "../modules/audio_device:audio_device",
    "../modules/audio_processing:audio_processing",
    "../modules/video_capture:video_capture_module",
    "../pc:libjingle_peerconnection",
    "../rtc_base:rtc_base",
    "../rtc_base:rtc_base_approved",
    "../rtc_base:rtc_json",
    "../system_wrappers:field_trial_default",
    "../system_wrappers:metrics_default",
    "../system_wrappers:runtime_enabled_features_default",
    "//third_party/libyuv",
  ]
}




